2008-03-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-msg.el: Use with-current-buffer.

	* message.el (message-ignored-resent-headers): Add "Delivered-To".

2008-03-08  Reiner Steib  <Reiner.Steib@gmx.de>

	* mail-source.el (mail-source-delete-old-incoming-confirm):
	Change default to nil.
	(mail-source-delete-old-incoming): Make confirmation prompt more clear.

2008-03-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-narrow-to-page): Position point properly.
	(gnus-article-goto-prev-page): Work for articles having ^L's.

	* gnus-sum.el (gnus-summary-end-of-article): Remove needless narrowing.

	* mm-view.el (mm-w3m-standalone-supports-m17n-p): Fix typo.

2008-03-07  Karl Fogel  <kfogel@red-bean.com>

	* gnus-bookmark.el: Adjust for renames in bookmark.el.
	(gnus-bookmark-make-record): Was `gnus-bookmark-make-cell'.
	(gnus-bookmark-jump): Adjust some variable names.

2008-03-06  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el: New package.
	(auth-source-choices): Add customization entry point variable.

	* gnus-registry.el (gnus-registry-user-format-function-M): Fix concat
	bug.

2008-03-05  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-install): Allow 'ask as an option.
	(gnus-registry-initialize, gnus-registry-install-p): Use it.
	(gnus-registry-install-shortcuts): Rename from
	gnus-registry-install-shortcuts-and-menus.  Installs the shortcuts in
	the `gnus-registry-mark-map' keymap dynamically from
	`gnus-registry-marks'.  The generated functions update the summary line
	when a registry mark is added or deleted, and will call
	`gnus-registry-install-p' (see the comments in the code).
	(gnus-registry-user-format-function-M): Use concat intelligently.

	* gnus-sum.el (gnus-summary-make-menu-bar): Add menu entries for all
	the registry mark functions.

2008-03-05  Glenn Morris  <rgm@gnu.org>

	* gnus-art.el (gnus-article-mode-line-format-alist): Move to gnus-sum.